--- a/src/web-app-b/public/stylesheets/style.css
+++ b/src/web-app-b/public/stylesheets/style.css
@@ -10,7 +10,7 @@
 body {
   font-family: fakt-web, Helvetica Neue, Hevetica, sans-serif;
   color: #333c4d;
-  background: linear-gradient(145deg, #3885ff 0%, #3ed6eb 100%);
+  background: linear-gradient(145deg, #8438ff 0%, #9c88e5 100%);
   display: flex;
   justify-content: center;
   align-items: stretch;
