--- a/src/web-app-b/views/home.pug
+++ b/src/web-app-b/views/home.pug
@@ -16,7 +16,7 @@ block content
         li
           strong=count
           |
-          | expenses
+          | sales
         li
           strong=total
           |
