--- a/src/web-app-b/views/header.pug
+++ b/src/web-app-b/views/header.pug
@@ -5,7 +5,7 @@ ul(class='navigation', role='navigation')
   li
       a(href='/') Home
   li
-      a(href='/expenses') Sales
+      a(href='/sales') Sales
   li.spacer
   if user
     li
